--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,7 +5,8 @@
   "files": [
     "library.js",
     "next.js",
-    "react-internal.js"
+    "react-internal.js",
+    "express.js"
   ],
   "devDependencies": {
     "@vercel/style-guide": "^5.2.0",
