--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
     "semi": true,
     "tabWidth": 4,
     "singleQuote": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
