--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,6 +10,7 @@
     "include": [
         "next-env.d.ts",
         "next.config.mjs",
+        "postcss.config.js",
         "**/*.ts",
         "**/*.tsx",
         ".next/types/**/*.ts"
