--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.6.6",
         "turbo": "^2.1.0",
         "typescript": "^5.4.5"
     },
