--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@types/react-bootstrap": "^0.32.37",
+        "bootstrap": "^5.3.3",
         "next": "14.2.6",
         "react": "18.3.1",
+        "react-bootstrap": "^2.10.5",
         "react-dom": "18.3.1"
     },
     "devDependencies": {
