--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,9 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "mongoose": "^8.6.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "passport": "^0.7.0",
+        "passport-google-oidc": "^0.1.0"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
@@ -24,6 +26,8 @@
         "@types/express": "^4.17.21",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20",
+        "@types/passport": "^1.0.16",
+        "@types/passport-google-oauth2": "^0.1.10",
         "esbuild-register": "^3.6.0",
         "eslint": "^8",
         "eslint-config-next": "14.2.6",
