--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "next": "14.2.6",
         "react": "18.3.1",
-        "react-dom": "18.3.1"
+        "react-dom": "18.3.1",
+        "tailwind-merge": "^2.5.3"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
