--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,12 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "globalEnv": ["API_PORT", "API_MONGODB_URI"],
+    "globalEnv": [
+        "API_PORT",
+        "API_MONGODB_URI",
+        "API_GOOGLE_CLIENT_ID",
+        "API_GOOGLE_CLIENT_SECRET",
+        "API_GOOGLE_CLIENT_CALLBACKURL"
+    ],
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
