--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
         "@fortawesome/fontawesome-free": "^6.6.0",
         "@types/react-bootstrap": "^0.32.37",
         "bootstrap": "^5.3.3",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "next": "14.2.6",
         "react": "18.3.1",
         "react-dom": "18.3.1"
