--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
+        "@repo/shared-types": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
