--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
+        "@repo/shared-types": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^20",
         "@types/react": "^18",
