--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,8 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "mongoose": "^8.6.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "socket.io": "^4.8.0"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
