--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
         "next": "14.2.6",
         "react": "18.3.1",
         "react-dom": "18.3.1",
+        "socket.io-client": "^4.8.0",
         "tailwind-merge": "^2.5.3"
     },
     "devDependencies": {
