--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 API_PORT=3001
 API_MONGODB_URI=mongodb://localhost:27017
+API_CLIENT_URL=http://localhost:3000
+API_SECRET=supersecret
+API_GOOGLE_CLIENT_ID=
+API_GOOGLE_CLIENT_SECRET=
+API_GOOGLE_CLIENT_CALLBACKURL=
