--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "express": "^4.19.2",
+        "express-session": "^1.18.1",
         "mongoose": "^8.6.0",
         "morgan": "^1.10.0",
         "passport": "^0.7.0",
-        "passport-google-oidc": "^0.1.0",
+        "passport-google-oauth2": "^0.2.0",
         "socket.io": "^4.8.0"
     },
     "devDependencies": {
@@ -24,8 +26,10 @@
         "@repo/shared-types": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/body-parser": "^1.19.5",
+        "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/express-session": "^1.18.0",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20",
         "@types/passport": "^1.0.16",
