chore: update env

--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
         "API_SECRET",
         "API_GOOGLE_CLIENT_ID",
         "API_GOOGLE_CLIENT_SECRET",
-        "API_GOOGLE_CLIENT_CALLBACKURL"
+        "API_GOOGLE_CALLBACK_URL"
     ],
     "tasks": {
         "build": {
