--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "globalEnv": [
+        "CLIENT_URL",
+        "SERVER_URL",
+
         "API_PORT",
         "API_MONGODB_URI",
         "API_CLIENT_URL",
