--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 CLIENT_URL=http://localhost:3000
-SERVER_URL=http://localhost:3001
+NEXT_PUBLIC_SERVER_URL=http://localhost:3001
 
 API_PORT=3001
 API_MONGODB_URI=mongodb://localhost:27017
