--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.6.0",
+        "axios": "^1.7.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "next": "14.2.10",
