--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,8 @@
         "clean": "rm -rf dist",
         "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
         "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
-        "start": "node -r esbuild-register ./src/index.ts"
+        "start": "node -r esbuild-register ./src/index.ts",
+        "db:seed": "node -r esbuild-register ./src/db/seed.ts"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
