build: docker files

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ NEXT_PUBLIC_SERVER_URL=http://localhost:3001
 API_PORT=3001
 API_MONGODB_URI=mongodb://localhost:27017
 API_SECRET=supersecret
+API_GOOGLE_CLIENT_URL=http://localhost:3001
 API_GOOGLE_CLIENT_ID=
 API_GOOGLE_CLIENT_SECRET=
