--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY . .
 
 RUN npm install -g turbo@2
-RUN turbo prune --scope=api --docker
+RUN turbo prune --scope=web --docker
 
 #########################################################################
 
@@ -23,7 +23,7 @@ COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/full/ .
 
 RUN npm install -g pnpm@9 && pnpm install --frozen-lockfile --ignore-scripts
-RUN pnpm turbo run build --filter=api
+RUN pnpm turbo run build --filter=web
 
 #########################################################################
 
@@ -31,11 +31,13 @@ FROM base AS runner
 
 WORKDIR /app
 
-RUN addgroup --system --gid 1001 expressjs && adduser --system --uid 1001 expressjs
-USER expressjs
+RUN addgroup --system --gid 1001 nodejs && adduser --system --uid 1001 nextjs
+USER nextjs
 
-COPY --from=installer --chown=expressjs:nodejs /app .
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
 
-EXPOSE 3001
+EXPOSE 3000
 
-CMD ["node", "apps/api/dist/index.js"]
+CMD ["node", "apps/web/server.js"]
