--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,10 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "next": "14.2.10",
+        "next-runtime-env": "^3.2.2",
         "react": "18.3.1",
         "react-dom": "18.3.1",
+        "sharp": "^0.33.5",
         "socket.io-client": "^4.8.0",
         "tailwind-merge": "^2.5.3"
     },
