--- a/turbo.json
+++ b/turbo.json
@@ -6,11 +6,10 @@
 
         "API_PORT",
         "API_MONGODB_URI",
-        "API_CLIENT_URL",
         "API_SECRET",
+        "API_GOOGLE_CLIENT_URL",
         "API_GOOGLE_CLIENT_ID",
-        "API_GOOGLE_CLIENT_SECRET",
-        "API_GOOGLE_CALLBACK_URL"
+        "API_GOOGLE_CLIENT_SECRET"
     ],
     "tasks": {
         "build": {
