feat: docker compose local and prod

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -38,9 +38,12 @@ services:
         ports:
             - 27017:27017
         volumes:
-            - ./data:/data/db
+            - mongodb_data:/data/db
         networks:
             - app_network
+
+volumes:
+    mongodb_data:
 
 networks:
     app_network:
